--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
                 <img
                   data-bs-toggle="modal"
                   data-bs-target="#exampleModal"
-                  src="img/2T_eDRAM_PIM.png"
+                  src="img/2T eDRAM PIM.png"
                 />
                 <p>2T eDRAM PIM</p>
                 <p>May (65-nm T)'24</p>
@@ -368,7 +368,7 @@
                 <img
                   data-bs-toggle="modal"
                   data-bs-target="#exampleModal"
-                  src="img/2T_eDRAM_PIM.png"
+                  src="img/ILO-based PUF.png"
                 />
                 <p>ILO-based PUF</p>
                 <p>May (65-nm T)'24</p>
@@ -377,7 +377,7 @@
                 <img
                   data-bs-toggle="modal"
                   data-bs-target="#exampleModal"
-                  src="img/2T_eDRAM_PIM.png"
+                  src="img/PI-based CDR.png"
                 />
                 <p>PI-based CDR</p>
                 <p>June (28-nm T)'24</p>
@@ -386,7 +386,7 @@
                 <img
                   data-bs-toggle="modal"
                   data-bs-target="#exampleModal"
-                  src="img/2T_eDRAM_PIM.png"
+                  src="img/TI SAR ADC.png"
                 />
                 <p>TI SAR ADC</p>
                 <p>June (28-nm T)'24</p>
@@ -395,7 +395,7 @@
                 <img
                   data-bs-toggle="modal"
                   data-bs-target="#exampleModal"
-                  src="img/2T_eDRAM_PIM.png"
+                  src="img/Supply_Noise_Insensitive_ADPLL.png"
                 />
                 <p>Supply Noise Insensitive ADPLL</p>
                 <p>Dec (65-nm T)'23</p>
@@ -404,7 +404,7 @@
                 <img
                   data-bs-toggle="modal"
                   data-bs-target="#exampleModal"
-                  src="img/2T_eDRAM_PIM.png"
+                  src="img/ADPLL.png"
                 />
                 <p>ADPLL ILO Calibration</p>
                 <p>Dec (65-nm T)'23</p>
@@ -413,7 +413,7 @@
                 <img
                   data-bs-toggle="modal"
                   data-bs-target="#exampleModal"
-                  src="img/2T_eDRAM_PIM.png"
+                  src="img/SRAM_PIM_Accelerator.png"
                 />
                 <p>SRAM PIM Accelerator</p>
                 <p>Dec (65-nm T)'23</p>
@@ -422,7 +422,7 @@
                 <img
                   data-bs-toggle="modal"
                   data-bs-target="#exampleModal"
-                  src="img/2T_eDRAM_PIM.png"
+                  src="img/Adaptive Gain Controlled DPLL.png"
                 />
                 <p>Adaptive Gain Controlled DPLL</p>
                 <p>Dec (65-nm T)'23</p>
@@ -431,7 +431,7 @@
                 <img
                   data-bs-toggle="modal"
                   data-bs-target="#exampleModal"
-                  src="img/2T_eDRAM_PIM.png"
+                  src="img/TX-PAM4-DRV.png"
                 />
                 <p>TX-PAM4-DRV</p>
                 <p>July (28-nm S)'23</p>
@@ -440,7 +440,7 @@
                 <img
                   data-bs-toggle="modal"
                   data-bs-target="#exampleModal"
-                  src="img/2T_eDRAM_PIM.png"
+                  src="img/High-Speed Equalizer.png"
                 />
                 <p>High-Speed Equalizer</p>
                 <p>July (28-nm S)'23</p>
@@ -449,7 +449,7 @@
                 <img
                   data-bs-toggle="modal"
                   data-bs-target="#exampleModal"
-                  src="img/2T_eDRAM_PIM.png"
+                  src="img/ADPLL2.png"
                 />
                 <p>ADPLL</p>
                 <p>Apr (28-nm S)'23</p>
@@ -458,29 +458,138 @@
                 <img
                   data-bs-toggle="modal"
                   data-bs-target="#exampleModal"
-                  src="img/2T_eDRAM_PIM.png"
+                  src="img/ADPLL2.png"
                 />
-                <p>CLICK THIS</p>
-                <p>CLICK THIS</p>
+                <p>ADPLL</p>
+                <p>Jan (28-nm S)'23</p>
               </div>
               <div class="chip-item">
                 <img
                   data-bs-toggle="modal"
                   data-bs-target="#exampleModal"
-                  src="img/2T_eDRAM_PIM.png"
+                  src="img/Injection Lock Oscillato.png"
                 />
-                <p>CLICK THIS</p>
-                <p>CLICK THIS</p>
+                <p>Injection Lock Oscillator  (ILO)</p>
+                <p>Jan (28-nm S)'23</p>
               </div>
               <div class="chip-item">
                 <img
                   data-bs-toggle="modal"
                   data-bs-target="#exampleModal"
-                  src="img/2T_eDRAM_PIM.png"
+                  src="img/Flash  ADC.png"
                 />
-                <p>CLICK THIS</p>
-                <p>CLICK THIS</p>
+                <p>Flash  ADC</p>
+                <p>Jan (28-nm S)'23</p>
               </div>
+              <div class="chip-item">
+                <img
+                  data-bs-toggle="modal"
+                  data-bs-target="#exampleModal"
+                  src="img/Clock Generator.jpg"
+                />
+                <p>Clock Generator</p>
+                <p>ISSCC'17, JSSC'21</p>
+              </div>
+              <div class="chip-item">
+                <img
+                  data-bs-toggle="modal"
+                  data-bs-target="#exampleModal"
+                  src="img/Clock and Data Recovery (CDR).jpg"
+                />
+                <p>Clock and Data Recovery (CDR)</p>
+                <p>VLSI'19, JSSC'21</p>
+              </div>
+              <div class="chip-item">
+                <img
+                  data-bs-toggle="modal"
+                  data-bs-target="#exampleModal"
+                  src="img/Clock Generator2.jpg"
+                />
+                <p>Clock Generator</p>
+                <p>TCAS-II'19</p>
+              </div>
+              <div class="chip-item">
+                <img
+                  data-bs-toggle="modal"
+                  data-bs-target="#exampleModal"
+                  src="img/Power Regulator.jpg"
+                />
+                <p>Power Regulator</p>
+                <p>ISSCC'19, SSC-L'19</p>
+              </div>
+              <div class="chip-item">
+                <img
+                  data-bs-toggle="modal"
+                  data-bs-target="#exampleModal"
+                  src="img/CDR.jpg"
+                />
+                <p>CDR</p>
+                <p>ASSCC'18, JSSC'19</p>
+              </div>
+              <div class="chip-item">
+                <img
+                  data-bs-toggle="modal"
+                  data-bs-target="#exampleModal"
+                  src="img/Clock Generator18.jpg"
+                />
+                <p>Clock Generator</p>
+                <p>TCAS-II'18</p>
+              </div>
+              <div class="chip-item">
+                <img
+                  data-bs-toggle="modal"
+                  data-bs-target="#exampleModal"
+                  src="img/Video Interface Receiver.jpg"
+                />
+                <p>Video Interface Receiver</p>
+                <p>TCAS-II'17</p>
+              </div>
+              <div class="chip-item">
+                <img
+                  data-bs-toggle="modal"
+                  data-bs-target="#exampleModal"
+                  src="img/Clock Generator16.jpg"
+                />
+                <p>Clock Generator </p>
+                <p>JSTS'16</p>
+              </div>
+              <div class="chip-item">
+                <img
+                  data-bs-toggle="modal"
+                  data-bs-target="#exampleModal"
+                  src="img/Clock Generator15.jpg"
+                />
+                <p>Clock Generator</p>
+                <p>ESSCIRC'15, TCAS-I'18</p>
+              </div>
+              <div class="chip-item">
+                <img
+                  data-bs-toggle="modal"
+                  data-bs-target="#exampleModal"
+                  src="img/Clock Gen. & CDR.jpg"
+                />
+                <p>Clock Gen. & CDR</p>
+                <p>Failed'17</p>
+              </div>
+              <div class="chip-item">
+                <img
+                  data-bs-toggle="modal"
+                  data-bs-target="#exampleModal"
+                  src="img/CDRF.jpg"
+                />
+                <p>CDR</p>
+                <p>Failed'16</p>
+              </div>
+              <div class="chip-item">
+                <img
+                  data-bs-toggle="modal"
+                  data-bs-target="#exampleModal"
+                  src="img/CDRF2.jpg"
+                />
+                <p>CDR</p>
+                <p>Failed'15</p>
+              </div>
+
             </div>
             <h5 class="h5-items" id="research-projects">
               Research Projects & Sponsors
