--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
                 <img
                   data-bs-toggle="modal"
                   data-bs-target="#exampleModal"
-                  src="img/ADPLL.png"
+                  src="img/ILO-based PUF.png"
                 />
                 <p>ADPLL ILO Calibration</p>
                 <p>Dec (65-nm T)'23</p>
