--- a/index.html
+++ b/index.html
@@ -175,6 +175,10 @@
               <p class="txt">
                 Welcome to HPIC at Hanyang University.
                 <br />
+                We focus on optimizing integrated circuits and systems for high-performance computing.
+                <br />
+                Please see the <a href="https://hpic-lab.github.io/#research">research section</a> for more information.
+    <br />
                 We are currently recruiting postdocs, graduate students, and
                 undergraduate interns. <br />
                 If you are interested in HPIC Design Lab., don't hesitate to get
