--- a/index.html
+++ b/index.html
@@ -717,7 +717,14 @@
                     design automation.
                   </p>
                   <p>
-                    <span>Details</span>He serves as a reviewer for various
+                    <span>Details</span>
+                    Received B.S. and Ph.D. degrees in electrical and computer engineering from Seoul National University, Seoul, South Korea, in 2012 and 2019, respectively. In 2019, he was a Post-Doctoral Researcher with the Inter-University Semiconductor Research Center, Seoul National University in the design of RCD/DB interface circuits for commercial DDR5 memory. 
+                    <br />
+                    From 2019 to 2020, he was a Research Scholar with the Center for Nanotechnology, NASA Ames Research Center, Moffet Field, CA in research of radiation-hardened neuromorphic processor design. From 2020 to 2022, he was a Post-Doctoral Research Scientist at Columbia University, New York, NY in the design of a multi-wavelength optical transceiver. He is currently an Assistant Professor at Hanyang University, Ansan, South Korea, in the school of electrical engineering.
+                    <br />
+                    His research interests include phase-locked loops (PLLs), clock and data recovery (CDR) circuits, injection-locked oscillators (ILOs), memory system architecture, neuromorphic computing, in-memory computing, optical interfaces, and design automation. 
+                    <br />
+                    He serves as a reviewer for various
                     journals, including the IEEE Journal of Solid-State
                     Circuits, IEEE Transactions on Circuits and Systems I/II,
                     IEEE Transactions on Computer-Aided Design of Integrated
