--- a/index.html
+++ b/index.html
@@ -729,6 +729,10 @@
                     Circuits, IEEE Transactions on Circuits and Systems I/II,
                     IEEE Transactions on Computer-Aided Design of Integrated
                     Circuits and Systems, and IEEE ACCESS.
+                    <br />
+                    <a href="https://drive.google.com/file/d/1-O553iH_hAohpycfDRlX6YO07z2_3d1G/view">curriculum vitae</a>
+                    <br />
+                    <a href="https://scholar.google.com/citations?user=9pp10QUAAAAJ&hl=en">google scholar</a>
                   </p>
                   <p><span>Email</span>mschoo@hanyang.ac.kr</p>
                 </div>
