--- a/index.html
+++ b/index.html
@@ -730,9 +730,9 @@
                     IEEE Transactions on Computer-Aided Design of Integrated
                     Circuits and Systems, and IEEE ACCESS.
                     <br /><br />
-                    <a href="https://drive.google.com/file/d/1-O553iH_hAohpycfDRlX6YO07z2_3d1G/view">curriculum vitae</a>
+                    <a href="https://drive.google.com/file/d/1-O553iH_hAohpycfDRlX6YO07z2_3d1G/view"><b>Curriculum Vitae</b></a>
                     <br />
-                    <a href="https://scholar.google.com/citations?user=9pp10QUAAAAJ&hl=en">google scholar</a>
+                    <a href="https://scholar.google.com/citations?user=9pp10QUAAAAJ&hl=en"><b>Google Scholar</b></a>
                   </p>
                   <p><span>Email</span>mschoo@hanyang.ac.kr</p>
                 </div>
