--- a/index.html
+++ b/index.html
@@ -714,7 +714,7 @@
                     clock and data recovery (CDR) circuits, injection-locked
                     oscillators (ILOs), memory system architecture, neuromorphic
                     computing, in-memory computing, optical interfaces, and
-                    design automation.
+                    design automation.<br />
                   </p>
                   <p>
                     <span>Details</span>
