--- a/index.html
+++ b/index.html
@@ -732,7 +732,7 @@
                     <br /><br />
                     <a href="https://drive.google.com/file/d/1-O553iH_hAohpycfDRlX6YO07z2_3d1G/view"><b>Curriculum Vitae</b></a>
                     <br />
-                    <a href="https://scholar.google.com/citations?user=9pp10QUAAAAJ&hl=en"><b>Google Scholar</b></a>
+                    <a href="https://scholar.google.com/citations?user=9pp10QUAAAAJ&hl=en"><b>Google Scholar</b></a><br />
                   </p>
                   <p><span>Email</span>mschoo@hanyang.ac.kr</p>
                 </div>
