--- a/index.html
+++ b/index.html
@@ -748,6 +748,11 @@
                 </div>
                 <div class="user-card-info">
                   <h2>Open Positions</h2>
+                  <p>
+                    <span>Open Positions</span>Please contact to Min-Seong (mschoo at hanyang dot ac dot kr).
+                    <br />
+                    And, think about your future after receiving a degree; Ph.D./Postdoc at HPIC, Ph.D./Postdoc at another institution (domestic/international), and finding a job (domestic/international).
+                  </p>
                 </div>
               </div>
             </div>
