--- a/index.html
+++ b/index.html
@@ -2430,7 +2430,7 @@
                 <img class="location-icon" src="img/location-svg.svg" />
                 <span id="person-address"
                   >55, Hanyangdaehak-ro, Sangnok-gu, Ansan-si, Gyeonggi-do,
-                  Republic of Korea</span
+                  Republic of Korea, RM #309, Engineering Building III</span
                 >
               </li>
 
