--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                 <br />
                 We focus on optimizing integrated circuits and systems for high-performance computing.
                 <br />
-                Please see the <a href="https://hpic-lab.github.io/#research">research section</a> for more information.
+                Please see the <a href="https://hpic-lab.github.io/#research"><b>RESEARCH SECTION</b></a> for more information.
     <br />
                 We are currently recruiting postdocs, graduate students, and
                 undergraduate interns. <br />
