--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     />
     <meta property="og:url" content="https://sorongosdev.github.io/lab_page" />
     <meta property="og:type" content="website" />
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+
     <title>HPIC</title>
     <link
     rel="stylesheet"
@@ -82,9 +82,11 @@
             alt="Logo"
             width="24"
             height="24"
-            class="d-inline-block align-text-top"/>
+            class="d-inline-block align-text-top"
+          />
 
-          HPIC</a>
+          HPIC</a
+        >
         <button
           type="button"
           class="navbar-toggler collapsed"
@@ -101,7 +103,7 @@
           <!-- <span class="navbar-toggler-icon"></span> -->
         </button>
 
-        <div class="collapse navbar-collapse" id="navbar">
+        <div class="navbar-collapse collapse" id="navbar">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="#">Home</a>
@@ -2523,10 +2525,5 @@
         });
       });
     </script>
-
-    <!-- Add Bootstrap JS and dependencies -->
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script> <!-- Added jQuery dependency -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script> <!-- Added Popper.js dependency -->
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script> <!-- Added Bootstrap JS -->
   </body>
 </html>
