--- a/index.html
+++ b/index.html
@@ -719,11 +719,11 @@
                 <div class="user-card-info">
                   <h2>Min-Seong Choo</h2>
                   <p>
-                    <span>Research Interests</span> phase-locked loops (PLLs),
+                    <span><br />Research Interests</span> phase-locked loops (PLLs),
                     clock and data recovery (CDR) circuits, injection-locked
                     oscillators (ILOs), memory system architecture, neuromorphic
                     computing, in-memory computing, optical interfaces, and
-                    design automation.<br />
+                    design automation.<br /><br />
                   </p>
                   <p>
                     <span>Details</span>
