Revert "Update index.html"
This reverts commit 6e36130bb2b7399dea7efc3d1960d40f8c79d8bc.

--- a/index.html
+++ b/index.html
@@ -719,11 +719,11 @@
                 <div class="user-card-info">
                   <h2>Min-Seong Choo</h2>
                   <p>
-                    <span><br />Research Interests</span> phase-locked loops (PLLs),
+                    <span>Research Interests</span> phase-locked loops (PLLs),
                     clock and data recovery (CDR) circuits, injection-locked
                     oscillators (ILOs), memory system architecture, neuromorphic
                     computing, in-memory computing, optical interfaces, and
-                    design automation.<br /><br />
+                    design automation.<br />
                   </p>
                   <p>
                     <span>Details</span>
