--- a/index.html
+++ b/index.html
@@ -604,6 +604,8 @@
               </div>
 
             </div>
+          
+        
             <h5 class="h5-items" id="research-projects">
               Research Projects & Sponsors
             </h5>
@@ -719,11 +721,12 @@
                 <div class="user-card-info">
                   <h2>Min-Seong Choo</h2>
                   <p>
+                    <br />
                     <span>Research Interests</span> phase-locked loops (PLLs),
                     clock and data recovery (CDR) circuits, injection-locked
                     oscillators (ILOs), memory system architecture, neuromorphic
                     computing, in-memory computing, optical interfaces, and
-                    design automation.<br />
+                    design automation.<br /><br />
                   </p>
                   <p>
                     <span>Details</span>
