모달, 글씨크기 변경

--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
               <div class="chip-item">
                 <img
                   data-bs-toggle="modal"
-                  data-bs-target="#exampleModal"
+                  data-bs-target="#Modal1"
                   src="img/2T eDRAM PIM.png"
                 />
                 <p>2T eDRAM PIM</p>
@@ -380,7 +380,7 @@
               <div class="chip-item">
                 <img
                   data-bs-toggle="modal"
-                  data-bs-target="#exampleModal"
+                  data-bs-target="#Modal2"
                   src="img/ILO-based PUF.png"
                 />
                 <p>ILO-based PUF</p>
@@ -389,7 +389,7 @@
               <div class="chip-item">
                 <img
                   data-bs-toggle="modal"
-                  data-bs-target="#exampleModal"
+                  data-bs-target="#Modal3"
                   src="img/PI-based CDR.png"
                 />
                 <p>PI-based CDR</p>
@@ -398,7 +398,7 @@
               <div class="chip-item">
                 <img
                   data-bs-toggle="modal"
-                  data-bs-target="#exampleModal"
+                  data-bs-target="#Modal4"
                   src="img/TI SAR ADC.png"
                 />
                 <p>TI SAR ADC</p>
@@ -407,7 +407,7 @@
               <div class="chip-item">
                 <img
                   data-bs-toggle="modal"
-                  data-bs-target="#exampleModal"
+                  data-bs-target="#Modal5"
                   src="img/Supply_Noise_Insensitive_ADPLL.png"
                 />
                 <p>Supply Noise Insensitive ADPLL</p>
@@ -416,7 +416,7 @@
               <div class="chip-item">
                 <img
                   data-bs-toggle="modal"
-                  data-bs-target="#exampleModal"
+                  data-bs-target="#Modal6"
                   src="img/ILO-based PUF.png"
                 />
                 <p>ADPLL ILO Calibration</p>
@@ -425,7 +425,7 @@
               <div class="chip-item">
                 <img
                   data-bs-toggle="modal"
-                  data-bs-target="#exampleModal"
+                  data-bs-target="#Modal7"
                   src="img/SRAM_PIM_Accelerator.png"
                 />
                 <p>SRAM PIM Accelerator</p>
@@ -434,7 +434,7 @@
               <div class="chip-item">
                 <img
                   data-bs-toggle="modal"
-                  data-bs-target="#exampleModal"
+                  data-bs-target="#Modal8"
                   src="img/Adaptive Gain Controlled DPLL.png"
                 />
                 <p>Adaptive Gain Controlled DPLL</p>
@@ -443,7 +443,7 @@
               <div class="chip-item">
                 <img
                   data-bs-toggle="modal"
-                  data-bs-target="#exampleModal"
+                  data-bs-target="#Modal9"
                   src="img/TX-PAM4-DRV.png"
                 />
                 <p>TX-PAM4-DRV</p>
@@ -452,7 +452,7 @@
               <div class="chip-item">
                 <img
                   data-bs-toggle="modal"
-                  data-bs-target="#exampleModal"
+                  data-bs-target="#Modal10"
                   src="img/High-Speed Equalizer.png"
                 />
                 <p>High-Speed Equalizer</p>
@@ -461,7 +461,7 @@
               <div class="chip-item">
                 <img
                   data-bs-toggle="modal"
-                  data-bs-target="#exampleModal"
+                  data-bs-target="#Modal11"
                   src="img/ADPLL2.png"
                 />
                 <p>ADPLL</p>
@@ -470,7 +470,7 @@
               <div class="chip-item">
                 <img
                   data-bs-toggle="modal"
-                  data-bs-target="#exampleModal"
+                  data-bs-target="#Modal12"
                   src="img/ADPLL2.png"
                 />
                 <p>ADPLL</p>
@@ -479,7 +479,7 @@
               <div class="chip-item">
                 <img
                   data-bs-toggle="modal"
-                  data-bs-target="#exampleModal"
+                  data-bs-target="#Modal13"
                   src="img/Injection Lock Oscillato.png"
                 />
                 <p>Injection Lock Oscillator  (ILO)</p>
@@ -488,7 +488,7 @@
               <div class="chip-item">
                 <img
                   data-bs-toggle="modal"
-                  data-bs-target="#exampleModal"
+                  data-bs-target="#Modal14"
                   src="img/Flash  ADC.png"
                 />
                 <p>Flash  ADC</p>
@@ -497,7 +497,7 @@
               <div class="chip-item">
                 <img
                   data-bs-toggle="modal"
-                  data-bs-target="#exampleModal"
+                  data-bs-target="#Modal15"
                   src="img/Clock Generator.jpg"
                 />
                 <p>Clock Generator</p>
@@ -506,7 +506,7 @@
               <div class="chip-item">
                 <img
                   data-bs-toggle="modal"
-                  data-bs-target="#exampleModal"
+                  data-bs-target="#Modal16"
                   src="img/Clock and Data Recovery (CDR).jpg"
                 />
                 <p>Clock and Data Recovery (CDR)</p>
@@ -515,7 +515,7 @@
               <div class="chip-item">
                 <img
                   data-bs-toggle="modal"
-                  data-bs-target="#exampleModal"
+                  data-bs-target="#Modal17"
                   src="img/Clock Generator2.jpg"
                 />
                 <p>Clock Generator</p>
@@ -524,7 +524,7 @@
               <div class="chip-item">
                 <img
                   data-bs-toggle="modal"
-                  data-bs-target="#exampleModal"
+                  data-bs-target="#Modal18"
                   src="img/Power Regulator.jpg"
                 />
                 <p>Power Regulator</p>
@@ -533,7 +533,7 @@
               <div class="chip-item">
                 <img
                   data-bs-toggle="modal"
-                  data-bs-target="#exampleModal"
+                  data-bs-target="#Modal19"
                   src="img/CDR.jpg"
                 />
                 <p>CDR</p>
@@ -542,7 +542,7 @@
               <div class="chip-item">
                 <img
                   data-bs-toggle="modal"
-                  data-bs-target="#exampleModal"
+                  data-bs-target="#Modal20"
                   src="img/Clock Generator18.jpg"
                 />
                 <p>Clock Generator</p>
@@ -551,7 +551,7 @@
               <div class="chip-item">
                 <img
                   data-bs-toggle="modal"
-                  data-bs-target="#exampleModal"
+                  data-bs-target="#Modal21"
                   src="img/Video Interface Receiver.jpg"
                 />
                 <p>Video Interface Receiver</p>
@@ -560,7 +560,7 @@
               <div class="chip-item">
                 <img
                   data-bs-toggle="modal"
-                  data-bs-target="#exampleModal"
+                  data-bs-target="#Modal22"
                   src="img/Clock Generator16.jpg"
                 />
                 <p>Clock Generator </p>
@@ -569,7 +569,7 @@
               <div class="chip-item">
                 <img
                   data-bs-toggle="modal"
-                  data-bs-target="#exampleModal"
+                  data-bs-target="#Modal23"
                   src="img/Clock Generator15.jpg"
                 />
                 <p>Clock Generator</p>
@@ -578,7 +578,7 @@
               <div class="chip-item">
                 <img
                   data-bs-toggle="modal"
-                  data-bs-target="#exampleModal"
+                  data-bs-target="#Modal24"
                   src="img/Clock Gen. & CDR.jpg"
                 />
                 <p>Clock Gen. & CDR</p>
@@ -587,7 +587,7 @@
               <div class="chip-item">
                 <img
                   data-bs-toggle="modal"
-                  data-bs-target="#exampleModal"
+                  data-bs-target="#Modal25"
                   src="img/CDRF.jpg"
                 />
                 <p>CDR</p>
@@ -596,7 +596,7 @@
               <div class="chip-item">
                 <img
                   data-bs-toggle="modal"
-                  data-bs-target="#exampleModal"
+                  data-bs-target="#Modal26"
                   src="img/CDRF2.jpg"
                 />
                 <p>CDR</p>
@@ -712,7 +712,7 @@
           <div class="col-12 col-lg-8">
             <!-- 프로필 카드 -->
 
-            <h2 id="phd-students">Principal Investigator</h2>
+            <h3 id="phd-students">Principal Investigator</h3>
             <div class="wrapper">
               <div class="user-card">
                 <div class="user-card-img">
@@ -751,7 +751,7 @@
             </div>
             <hr />
 
-            <h2 id="phd-students">Ph.D./M.S. Students</h2>
+            <h3 id="phd-students">Ph.D./M.S. Students</h3>
             <div class="wrapper">
               <div class="user-card">
                 <div class="user-card-img">
@@ -768,7 +768,7 @@
               </div>
             </div>
 
-            <h2 class="h2-items" id="ms-phd-students">M.S.-Ph.D. Candidates</h2>
+            <h3 class="h2-items" id="ms-phd-students">M.S.-Ph.D. Candidates</h3>
             <div class="wrapper">
               <div class="user-card">
                 <div class="user-card-img">
@@ -822,7 +822,7 @@
               </div>
             </div>
 
-            <h2 class="h2-items" id="ms-students">M.S. Candidates</h2>
+            <h2 class="h3-items" id="ms-students">M.S. Candidates</h3>
             <div class="wrapper">
               <div class="user-card">
                 <div class="user-card-img">
@@ -984,7 +984,7 @@
               </div>
             </div>
 
-            <h2 class="h3-items" id="ms-students">Undergraduate Researchers</h2>
+            <h3 class="h3-items" id="ms-students">Undergraduate Researchers</h3>
             <div class="wrapper">
               <div class="user-card">
                 <div class="user-card-img">
@@ -1213,7 +1213,7 @@
                 </div>
               </div>
             </div>
-            <h2 class="h2-items" id="ms-students">Undergraduate Internship</h2>
+            <h3 class="h3-items" id="ms-students">Undergraduate Internship</h3>
             <div class="wrapper">
               <div class="user-card">
                 <div class="user-card-img">
