--- a/index.html
+++ b/index.html
@@ -900,7 +900,7 @@
             <div class="wrapper">
               <div class="user-card">
                 <div class="user-card-img">
-                  <img src="img/sh-ok-profile-img.png" alt="" />
+                  <img src="img/sh-ok-profile-img.jpg" alt="" />
                 </div>
                 <div class="user-card-info">
                   <h2>Sang-Hyun Ok</h2>
