pub 아코디언 헤더 상단이 화면 상단으로 스크롤되게

--- a/index.html
+++ b/index.html
@@ -1299,7 +1299,7 @@
             <div class="accordion">
               <!-- 2024 -->
               <h3>2024</h3>
-              <div>Nothing</div>
+              <div class="container">Nothing</div>
 
               <!-- 2023 -->
               <h3>2023</h3>
