--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                 <br />
                 We focus on optimizing integrated circuits and systems for high-performance computing.
                 <br />
-                Please see the <a href="https://hpic-lab.github.io/#research"><b>RESEARCH SECTION</b></a> for more information.
+                Please see the <a href="https://hpic-lab.github.io/#research"><u><b>RESEARCH SECTION</b></u></a> for more information.
     <br />
                 We are currently recruiting postdocs, graduate students, and
                 undergraduate interns. <br />
@@ -203,7 +203,7 @@
       <div class="container">
         <div class="row">
           <div class="col-12 col-lg-4 section-heading">
-            <h1>Lab Policy</h1>
+            <h3>Lab Policy</h3>
           </div>
           <div class="col-12 col-lg-8">
             <h5 id="lab-policy-desc">
@@ -242,7 +242,7 @@
       <div class="container">
         <div class="row">
           <div class="col-12 col-lg-4 section-heading">
-            <h1>News</h1>
+            <h3>News</h3>
           </div>
           <div class="col-12 col-lg-8">
             <div class="gallery-title-row">
@@ -323,7 +323,7 @@
       <div class="container">
         <div class="row">
           <div class="col-12 col-lg-4 section-heading">
-            <h1>HPIC in Media</h1>
+            <h3>HPIC in Media</h3>
           </div>
           <div class="col-12 col-lg-8">
             <h3 class="in-media-item">
@@ -351,7 +351,7 @@
       <div class="container">
         <div class="row">
           <div class="col-12 col-lg-4 section-heading">
-            <h1>Research</h1>
+            <h3>Research</h3>
           </div>
           <div class="col-12 col-lg-8">
             <h5>High-Performance Integrated Circuits(HPIC)</h5>
@@ -707,7 +707,7 @@
       <div class="container">
         <div class="row">
           <div class="col-12 col-lg-4 section-heading">
-            <h1>People</h1>
+            <h3>People</h3>
           </div>
           <div class="col-12 col-lg-8">
             <!-- 프로필 카드 -->
@@ -1257,7 +1257,7 @@
       <div class="container">
         <div class="row">
           <div class="col-12 col-lg-4 section-heading">
-            <h1>Publications</h1>
+            <h3>Publications</h3>
           </div>
           <div class="col-12 col-lg-8">
             <!-- 2024 -->
@@ -2376,7 +2376,7 @@
       <div class="container">
         <div class="row">
           <div class="col-12 col-lg-4 section-heading">
-            <h1>Teaching</h1>
+            <h3>Teaching</h3>
           </div>
           <div class="col-12 col-lg-8">
             <h5 id="courses">Courses</h5>
@@ -2421,7 +2421,7 @@
       <div class="container">
         <div class="row contact-widget">
           <div class="col-12 col-lg-4 section-heading">
-            <h1>Contact</h1>
+            <h3>Contact</h3>
           </div>
           <div class="col-12 col-lg-8">
             <ul class="fa-ul contact-ul" style="margin-left: 0">
