--- a/index.html
+++ b/index.html
@@ -193,7 +193,9 @@
                 We focus on optimizing integrated circuits and systems for
                 high-performance computing.
                 <br />
-                Please see the <a href="https://hpic-lab.github.io/#research"><u><b>RESEARCH SECTION</b></u></a> for more information.
+                Please see the 
+                <a href="https://hpic-lab.github.io/#research"><span style="color:white;"><u><b>RESEARCH SECTION</b></u></span></a>
+                for more information.
     <br />
                 We are currently recruiting postdocs, graduate students, and
                 undergraduate interns. <br />
