992~1400픽셀 사이 네비게이션바 안 보이는 이슈 해결

--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
         <button
           type="button"
           class="navbar-toggler collapsed"
-          data-toggle="collapse"
-          data-target="#navbar"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbar"
           aria-controls="navbar"
           aria-expanded="false"
           aria-label="Toggle navigation"
@@ -193,10 +193,14 @@
                 We focus on optimizing integrated circuits and systems for
                 high-performance computing.
                 <br />
-                Please see the 
-                <a href="https://hpic-lab.github.io/#research"><span style="color:white;"><u><b>RESEARCH SECTION</b></u></span></a>
+                Please see the
+                <a href="https://hpic-lab.github.io/#research"
+                  ><span style="color: white"
+                    ><u><b>RESEARCH SECTION</b></u></span
+                  ></a
+                >
                 for more information.
-    <br />
+                <br />
                 We are currently recruiting postdocs, graduate students, and
                 undergraduate interns. <br />
                 If you are interested in HPIC Design Lab., don't hesitate to get
