--- a/index.html
+++ b/index.html
@@ -723,63 +723,90 @@
           <div class="col-12 col-lg-8">
             <!-- 프로필 카드 -->
 
-            <h3 id="phd-students">Principal Investigator</h3>
+            <h3 id="professor">Principal Investigator</h3>
             <div class="wrapper">
               <div class="user-card">
-                <div class="user-card-img">
-                  <img src="img/minseong-chu-profile-img.png" alt="" />
-                </div>
-                <div class="user-card-info">
-                  <h2>Min-Seong Choo</h2>
-                  <p>
-                    <span>Research Interests</span> phase-locked loops (PLLs),
-                    clock and data recovery (CDR) circuits, injection-locked
-                    oscillators (ILOs), memory system architecture, neuromorphic
-                    computing, in-memory computing, optical interfaces, and
-                    design automation.<br /><br />
-                  </p>
-                  <p>
-                    <span>Details</span>
-                    Received B.S. and Ph.D. degrees in electrical and computer
-                    engineering from Seoul National University, Seoul, South
-                    Korea, in 2012 and 2019, respectively. In 2019, he was a
-                    Post-Doctoral Researcher with the Inter-University
-                    Semiconductor Research Center, Seoul National University in
-                    the design of RCD/DB interface circuits for commercial DDR5
-                    memory.
-                    <br /><br />
-                    From 2019 to 2020, he was a Research Scholar with the Center
-                    for Nanotechnology, NASA Ames Research Center, Moffet Field,
-                    CA in research of radiation-hardened neuromorphic processor
-                    design. From 2020 to 2022, he was a Post-Doctoral Research
-                    Scientist at Columbia University, New York, NY in the design
-                    of a multi-wavelength optical transceiver. He is currently
-                    an Assistant Professor at Hanyang University, Ansan, South
-                    Korea, in the school of electrical engineering.
-                    <br /><br />
-                    His research interests include phase-locked loops (PLLs),
-                    clock and data recovery (CDR) circuits, injection-locked
-                    oscillators (ILOs), memory system architecture, neuromorphic
-                    computing, in-memory computing, optical interfaces, and
-                    design automation.
-                    <br /><br />
-                    He serves as a reviewer for various journals, including the
-                    IEEE Journal of Solid-State Circuits, IEEE Transactions on
-                    Circuits and Systems I/II, IEEE Transactions on
-                    Computer-Aided Design of Integrated Circuits and Systems,
-                    and IEEE ACCESS.
-                    <br /><br />
-                    <a
-                      href="https://drive.google.com/file/d/1-O553iH_hAohpycfDRlX6YO07z2_3d1G/view"
-                      ><b>Curriculum Vitae</b></a
-                    >
-                    <br />
-                    <a
-                      href="https://scholar.google.com/citations?user=9pp10QUAAAAJ&hl=en"
-                      ><b>Google Scholar</b></a
-                    ><br />
-                  </p>
-                  <p><span>Email</span>mschoo@hanyang.ac.kr</p>
+                <div class="container">
+                  <div class="row">
+                    <div class="col-12 col-lg-4 profile-left">
+                      <!-- 프로필 이미지 -->
+                      <img
+                        class="portrait"
+                        src="img/minseong-chu-profile-img.png"
+                        alt="minseong-chu-profile-img"
+                      />
+
+                      <!-- 프로필 이미지 아래 설명 -->
+                      <div class="portrait-title">
+                        <h2>Minseong Chu</h2>
+                        <h3>Assistant Professor</h3>
+                        <h3>
+                          <a
+                            href="https://www.hanyang.ac.kr/web/www/erica-campus1"
+                            ><span>Hanyang University ERICA</span></a
+                          >
+                        </h3>
+                        <!-- 프로필 아래 링크 아이콘 -->
+                        <ul class="network-icon" area-hidden="true">
+                          <li>
+                            <a
+                              href="https://scholar.google.com/citations?user=9pp10QUAAAAJ&hl=en"
+                            >
+                              <img src="img/google-scholar-svg.svg" />
+                            </a>
+                          </li>
+                          <li>
+                            <a
+                              href="https://drive.google.com/file/d/1-O553iH_hAohpycfDRlX6YO07z2_3d1G/view"
+                            >
+                              <img src="img/cv-svg.svg" />
+                            </a>
+                          </li>
+                          <li>
+                            <a
+                              href="https://www.linkedin.com/in/min-seong-choo-5b7036176/"
+                            >
+                              <img src="img/linkedin-svg.svg" />
+                            </a>
+                          </li>
+                          <li>
+                            <a href="https://orcid.org/0000-0002-8638-6332">
+                              <img src="img/orcid-svg.svg" />
+                            </a>
+                          </li>
+                        </ul>
+                      </div>
+                    </div>
+                    <div class="col-12 col-lg-8 profile-right">
+                      <!-- 프로필 우측 설명 -->
+                      <p>
+                        I serve as a reviewer for various journals, including
+                        the IEEE Journal of Solid-State Circuits, IEEE
+                        Transactions on Circuits and Systems I/II, IEEE
+                        Transactions on Computer-Aided Design of Integrated
+                        Circuits and Systems, and IEEE ACCESS.
+                      </p>
+
+                      <h3>Research Interests</h3>
+                      <ul class="ul-interests">
+                        <li><i>High-Speed Interface Design </i></li>
+                        <li>
+                          <i
+                            >Phase-Locked Loop (PLL) and Clock and Data Recovery
+                            (CDR) Circuits
+                          </i>
+                        </li>
+                        <li><i>Injection-Locked Oscillator (ILO)</i></li>
+                        <li><i>Neuromorphic Computing</i></li>
+                        <li><i>In-Memory Computing (IMC)</i></li>
+                        <li><i>Processing-In-Memory (PIM)</i></li>
+                        <li><i>Optical Transceiver</i></li>
+                        <li>
+                          <i>Script-Based Design/Measurement Automation</i>
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
