--- a/index.html
+++ b/index.html
@@ -740,12 +740,7 @@
                       <div class="portrait-title">
                         <h2>Minseong Chu</h2>
                         <h3>Assistant Professor</h3>
-                        <h3>
-                          <a
-                            href="https://www.hanyang.ac.kr/web/www/erica-campus1"
-                            ><span>Hanyang University ERICA</span></a
-                          >
-                        </h3>
+
                         <!-- 프로필 아래 링크 아이콘 -->
                         <ul class="network-icon" area-hidden="true">
                           <li>
@@ -779,6 +774,26 @@
                     </div>
                     <div class="col-12 col-lg-8 profile-right">
                       <!-- 프로필 우측 설명 -->
+
+                      <p>
+                        <span>Research Interests</span>
+                      </p>
+                      <ul class="ul-interests">
+                        <li>High-Speed Interface Design</li>
+                        <li>
+                          Phase-Locked Loop (PLL) and Clock and Data Recovery
+                          (CDR) Circuits
+                        </li>
+                        <li>Injection-Locked Oscillator (ILO)</li>
+                        <li>Neuromorphic Computing</li>
+                        <li>In-Memory Computing (IMC)</li>
+                        <li>Processing-In-Memory (PIM)</li>
+                        <li>Optical Transceiver</li>
+                        <li>Script-Based Design/Measurement Automation</li>
+                      </ul>
+                      <p>
+                        <span>Details</span>
+                      </p>
                       <p>
                         I serve as a reviewer for various journals, including
                         the IEEE Journal of Solid-State Circuits, IEEE
@@ -786,25 +801,6 @@
                         Transactions on Computer-Aided Design of Integrated
                         Circuits and Systems, and IEEE ACCESS.
                       </p>
-
-                      <h3>Research Interests</h3>
-                      <ul class="ul-interests">
-                        <li><i>High-Speed Interface Design </i></li>
-                        <li>
-                          <i
-                            >Phase-Locked Loop (PLL) and Clock and Data Recovery
-                            (CDR) Circuits
-                          </i>
-                        </li>
-                        <li><i>Injection-Locked Oscillator (ILO)</i></li>
-                        <li><i>Neuromorphic Computing</i></li>
-                        <li><i>In-Memory Computing (IMC)</i></li>
-                        <li><i>Processing-In-Memory (PIM)</i></li>
-                        <li><i>Optical Transceiver</i></li>
-                        <li>
-                          <i>Script-Based Design/Measurement Automation</i>
-                        </li>
-                      </ul>
                     </div>
                   </div>
                 </div>
