h5 margin top 조정

--- a/index.html
+++ b/index.html
@@ -339,22 +339,22 @@
             <h1>HPIC in Media</h1>
           </div>
           <div class="col-12 col-lg-8">
-            <h3 class="in-media-item">
+            <h5 class="in-media-item">
               <a
                 href="https://www.newshyu.com/news/articleView.html?idxno=1008944"
               >
                 "학부생 논문이 국제 학술대회에 등재... 전자공학부 학생들의
                 이례적인 성과"</a
               >
-            </h3>
-            <h3 class="in-media-item">
+            </h5>
+            <h5 class="in-media-item">
               <a
                 href="https://www.youtube.com/watch?v=8XNEn5FGGIY&ab_channel=%EB%8C%80%ED%95%9C%EC%A0%84%EC%9E%90%EA%B3%B5%ED%95%99%ED%9A%8CIEIE-%EA%B3%B5%EC%8B%9D%EC%B1%84%EB%84%90"
               >
                 "대한전자공학회 ICT 백과사전 - 통신용 회로 및 시스템 (한양대학교
                 추민성 교수)"</a
               >
-            </h3>
+            </h5>
           </div>
         </div>
       </div>
@@ -373,8 +373,8 @@
               high-performance computing.
             </p>
             <img class="hpic-img" src="img/research-main-img.jpg" />
-            <div class="gallery-title-row">
-              <h3>Chip Gallery</h3>
+            <div class="gallery-title-row chip-gallery-title-row">
+              <h5>Chip Gallery</h5>
               <a href="chip_gallery.html"
                 ><button class="btn btn-primary btn-rotate">+</button></a
               >
@@ -1306,6 +1306,7 @@
                   </div>
                 </div>
               </div>
+
               <!-- Undergraduate Internship-->
               <h3 class="h3-items" id="ms-students">
                 Undergraduate Internship
