--- a/index.html
+++ b/index.html
@@ -1372,7 +1372,7 @@
                   <div class="col-md-6">
                     <div class="card pub-card mb-4">
                       <img
-                        src="img/dummy-img.jpg"
+                        src="img/c8.png"
                         class="card-img-top"
                         alt="..."
                       />
@@ -1425,7 +1425,7 @@
                   <div class="col-md-6">
                     <div class="card pub-card mb-4">
                       <img
-                        src="img/dummy-img.jpg"
+                        src="img/c7.png"
                         class="card-img-top"
                         alt="..."
                       />
@@ -1482,7 +1482,7 @@
                   <div class="col-md-6">
                     <div class="card pub-card mb-4">
                       <img
-                        src="img/dummy-img.jpg"
+                        src="img/j11.png"
                         class="card-img-top"
                         alt="..."
                       />
@@ -1546,7 +1546,7 @@
                   <div class="col-md-6">
                     <div class="card pub-card mb-4">
                       <img
-                        src="img/dummy-img.jpg"
+                        src="img/j10.png"
                         class="card-img-top"
                         alt="..."
                       />
@@ -1605,7 +1605,7 @@
                   <div class="col-md-6">
                     <div class="card pub-card mb-4">
                       <img
-                        src="img/dummy-img.jpg"
+                        src="img/j9.png"
                         class="card-img-top"
                         alt="..."
                       />
@@ -1673,7 +1673,7 @@
                   <div class="col-md-6">
                     <div class="card pub-card mb-4">
                       <img
-                        src="img/dummy-img.jpg"
+                        src="img/j8.png"
                         class="card-img-top"
                         alt="..."
                       />
@@ -1732,7 +1732,7 @@
                   <div class="col-md-6">
                     <div class="card pub-card mb-4">
                       <img
-                        src="img/dummy-img.jpg"
+                        src="img/j7.png"
                         class="card-img-top"
                         alt="..."
                       />
